ifds/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_early_return_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (50) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (44) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (31) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytestfoo, [0], [0])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Call(mytestfoo, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:taut] (47) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (46) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (45) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (41) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (40) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (39) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (38) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (37) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (34) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (25) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (22) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (19) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (5, 0) { };
\node[font=\tiny] (note_7) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (3.5, 1.5) {Return([0])};
\node[font=\tiny] (note_9) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_10) at (3.5, 1.5) {Return([0])};
\node[font=\tiny] (note_14) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_15) at (3.5, 1.5) {Return([0])};
\node[font=\tiny] (note_16) at (3.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] (note_17) at (3.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (30) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (29) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (28) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (27) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (12) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (9, 0) { };
\node[font=\tiny] (note_4) at (7.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_5) at (7.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_6) at (7.5, 2.5) {Return([1])};
\node[font=\tiny] (note_11) at (7.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_12) at (7.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_13) at (7.5, 2.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (11) [bend right] edge  node { } (14);
		\path[->, blue] (11) [bend right] edge  node { } (15);
		\path[->, blue] (11) [bend right] edge  node { } (16);
		\path[->, blue] (11) [bend right] edge  node { } (17);
		\path[->, blue] (18) [bend right] edge  node { } (21);
		\path[->, blue] (18) [bend right] edge  node { } (22);
		\path[->, blue] (18) [bend right] edge  node { } (23);
		\path[->, blue] (12) [loop right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (31);
		\path[->, blue] (19) [loop right] edge  node { } (19);
		\path[->, blue] (19) [bend right] edge  node { } (40);
		\path[->, blue] (19) [bend right] edge  node { } (41);
		\path[->, blue] (0) [bend right] edge  node { } (44);
		\path[->, blue] (0) [bend right] edge  node { } (50);
		\path[->] (0) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (0) edge (10);
		\path[->] (11) edge (14);
		\path[->] (14) edge (15);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (18) edge (21);
		\path[->] (21) edge (22);
		\path[->] (22) edge (23);
		\path[->] (18) edge (24);
		\path[->] (24) edge (25);
		\path[->] (25) edge (26);
		\path[->] (11) edge (27);
		\path[->] (27) edge (28);
		\path[->] (28) edge (29);
		\path[->] (29) edge (30);
		\path[->] (10) edge node { } (31);
		\path[->] (16) edge (32);
		\path[->] (22) edge (34);
		\path[->] (18) edge (37);
		\path[->] (37) edge (38);
		\path[->] (38) edge (39);
		\path[->] (19) edge (40);
		\path[->] (40) edge (41);
		\path[->] (18) edge (45);
		\path[->] (45) edge (46);
		\path[->] (46) edge (47);
		\path[->] (44) edge node { } (50);


                \end{tikzpicture}
            \end{document}
